tests/negative/Package/PackageJuvixNoPackageSymbol/Package.juvix
module Package;

import PackageDescription.V2 open;

abc : Nat := 1;
